FIxed z-index layer

--- a/public/css/tooplate.css
+++ b/public/css/tooplate.css
@@ -450,6 +450,17 @@ footer {
   .nav-item {
     margin-right: 0;
   }
+
+
+  .modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    background-color: #000;
+    }
 }
 
 @media (max-width: 1182px) {
